/* LiteSQL - Documentation - Changes
 * 
 * By Tero Laitinen 
 * 
 * See LICENSE for copyright information. */

/* \file changes.txt
    Manual */
/** \page changes Changes
\section vercvs CVS Version

2006 January 20:
- bug fix: Date-, DateTime- and Time-fields were broken. 
- bug fix: litesql-gen wrote invalid default values for Date-, DateTime and Time-fields. 
- bug fix: litesql-gen did not reset fields' modified flags when assigning record to object

2006 January 19:
- bug fix: MySQL 5 does not like names like 'schema' and 'sql'. Internal table is now named to 'schema_' and fields are postfixed with an underscore. This breaks compatibility with databases created with previous versions. 

2006 January 16:
- bug fix: litesql-gen did not create correct SQL schema for backends with auto incrementing primary key fields (mysql, sqlite3)
- bug fix: SQLite3 - backend did not reset transaction state when error occurred
- litesql-gen writes #ifndef #define #endif - checks to generated header now


2006 January 14:
- bug fix: litesql-gen did not sort objects of relation tags and this resulted to broken relation table names

2006 January 3:
- bug fix: litesql-gen writes explicit template parameters for make_pair now (gcc 2.96 requires it)

2005 December 25:
- bug fix: all backend transaction routines leaked some memory (fixed by Michel Loiseleur)
- bug fix: litesql-gen crashed when XML file had undefined objects inside relation tag
- litesql-config utility and pkg-config support added (by Eric McDonald)

- bug fix: litesql-gen produced broken table names when using longer name than 31 characters
- bug fix: litesql-gen produced broken SQL (duplicated relation attribute fields in CREATE TABLE - statements)
- RPM packaging headers (by Eric McDonald)
- added .cvsignore - files (by Eric McDonald)
- versioning and packaging improvements (by Eric McDonald)
- litesql-gen : internal restructuring
\section ver0_3_1 Version 0.3.1